# microproccesor_lab

Microcontroller/traffic-light/: Cargo.toml
Microcontroller/traffic-light/.cargo/: config.toml
Microcontroller/traffic-light/src/: main.rs
Microproccessor/07_Lab-4/: task1.s  task2.s  task3.s  task4.s  task5.s
Microproccessor/07_Lab-Exam-1/: 11.s  4.s
Microproccessor/07_Lab3/: 1.1.s  1.2.s  1.s  2.s  3.s  4.s
Microproccessor/07_Lab5/: 1.s  2.s  3.s  4.s
Microproccessor/07_Lab6/: 1.s  2.s  3.s  4.s
